--- a/nlp.html
+++ b/nlp.html
@@ -116,7 +116,7 @@ on various websites and social media platforms that will then be used for?...</p
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HuaweiTechnologiesCanadaCoLtd/743999697071120-developpeurs-en-apprentissage-automatique-en-taln-ml-developers-for-nlp'>Huawei Technologies Canada Co., Ltd. D?veloppeurs en apprentissage automatique en TALN / ML Developers for NLP | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HuaweiTechnologiesCanadaCoLtd/743999697071120-developpeurs-en-apprentissage-automatique-en-taln-ml-developers-for-nlp'>Huawei Technologies Canada Co., Ltd. D?veloppeurs en apprentissage automatique en TALN / ML Developers for NLP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada Canada</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -124,7 +124,7 @@ on various websites and social media platforms that will then be used for?...</p
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-guidehouse.icims.com/jobs/2393/ai-data-scientist-nlp-engineer/job'>AI Data Scientist/NLP Engineer in Washington DC | Careers at 109</a></h5> 
+<h5><a href='https://careers-guidehouse.icims.com/jobs/2393/ai-data-scientist-nlp-engineer/job'>AI Data Scientist/NLP Engineer in Washington DC | Careers at 109</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... 109 is now hiring a AI Data Scientist/NLP Engineer in Washington DC. Review all 
 of the job details and apply today!</p>
@@ -159,7 +159,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1896220'>Job Application for Research Engineer - AllenNLP at The Allen Institute for Artificial Intelligence</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1896220'>Job Application for Research Engineer - AllenNLP at The Allen Institute for Artificial Intelligence</a></h5> 
 <p><span class="badge badge-light">Seattle Irvine</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -183,7 +183,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/babylon-health/job/nlp-software-engineer/02ebe764cf46613e74f7555d3310dbb5/'>NLP Software Engineer at Babylon Health</a></h5> 
+<h5><a href='https://snap.hr/babylon-health/job/nlp-software-engineer/02ebe764cf46613e74f7555d3310dbb5/'>NLP Software Engineer at Babylon Health</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
@@ -236,7 +236,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-09-20</p>
 <hr/>
-<h5><a href='https://thehub.fi/jobs/nlp-data-engineer-and-data-scientist'>The Hub | NLP Data Engineer &amp; Data Scientist @ Meeshkan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thehub.fi/jobs/nlp-data-engineer-and-data-scientist'>The Hub | NLP Data Engineer &amp; Data Scientist @ Meeshkan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-20</p>
 <hr/>
@@ -301,7 +301,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://visiblealpha.recruiterbox.com/jobs/fk03fqj/'>
+<h5><a href='https://visiblealpha.recruiterbox.com/jobs/fk03fqj/'>
     Senior Software Engineer (NLP) at Visible Alpha
 </a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
@@ -330,7 +330,7 @@ que?...</p>
 <p>Aug 26, 2019 ... Hands-on working experience in deep NLP Learning algorithms experiences in 
 unstructured text data analysis across industries. Added advantage would be?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
+<h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-01</p>
 <hr/>
@@ -369,7 +369,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Our engineers and scientists work on technologies such as Deep Learning, 
 Natural Language Processing, Spark, Kafka, AWS, Big data and React.</p>
@@ -412,7 +412,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genesys.referrals.selectminds.com/jobs/staff-software-engineer-nlu-nlp-3768'>Staff Software Engineer (NLU/ NLP) - Genesys Careers</a></h5> 
+<h5><a href='https://genesys.referrals.selectminds.com/jobs/staff-software-engineer-nlu-nlp-3768'>Staff Software Engineer (NLU/ NLP) - Genesys Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
@@ -435,7 +435,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/oN3Kafwu'>Universal Music Group Careers - Chatbot and NLP R&D Intern (4-5 Months)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/oN3Kafwu'>Universal Music Group Careers - Chatbot and NLP R&D Intern (4-5 Months)</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
@@ -495,7 +495,7 @@ Machine Learning or Statistics. Why you'd love working here. Everyone at?...</p>
 Natural Language Processing to join us in our commitment to improve the quality 
 of?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/jdcom/jobs/4368116002'>Job Application for JD Digits - Research Scientist / Engineer - NLP at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/jdcom/jobs/4368116002'>Job Application for JD Digits - Research Scientist / Engineer - NLP at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... 1) Conduct applied research and development in natural language processing, 
 deep learning, and machine learning. 2) Research and evaluate state-of-the-art?...</p>
